Add cable config to fix solid_cable crash

--- a/config/database.yml
+++ b/config/database.yml
@@ -30,3 +30,6 @@ production:
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   url: <%= ENV["DATABASE_URL"] %>
 
+  cable:
+    <<: *default
+    url: <%= ENV["DATABASE_URL"] %>
