Fix: nest cable and queue under production

--- a/config/database.yml
+++ b/config/database.yml
@@ -3,27 +3,24 @@ development:
   encoding: unicode
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   database: teachmeback_development
-  username: <%= ENV["PGUSER"] %>
-  password: <%= ENV["PGPASSWORD"] %>
-  host: <%= ENV["PGHOST"] %>
 
 test:
   adapter: postgresql
   encoding: unicode
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   database: teachmeback_test
-  username: <%= ENV["PGUSER"] %>
-  password: <%= ENV["PGPASSWORD"] %>
-  host: <%= ENV["PGHOST"] %>
 
 production:
   adapter: postgresql
-  encoding: unicode
+  url: <%= ENV["DATABASE_URL"] %>
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  url: <%= ENV["DATABASE_URL"] %>
 
-cable:
-  adapter: postgresql
-  url: <%= ENV["DATABASE_URL"] %>
+  cable:
+    adapter: postgresql
+    url: <%= ENV["DATABASE_URL"] %>
+
+  queue:
+    adapter: postgresql
+    url: <%= ENV["DATABASE_URL"] %>
 
 
