--- a/config/database.yml
+++ b/config/database.yml
@@ -1,19 +1,21 @@
-development:
-  adapter: postgresql
-  encoding: unicode
+default: &default
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  database: teachmeback_development
+  timeout: 5000
+
+development:
+  <<: *default
+  adapter: sqlite3
+  database: db/development.sqlite3
 
 test:
-  adapter: postgresql
-  encoding: unicode
-  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  database: teachmeback_test
+  <<: *default
+  adapter: sqlite3
+  database: db/test.sqlite3
 
 production:
+  <<: *default
   adapter: postgresql
   url: <%= ENV["DATABASE_URL"] %>
-  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
 
   cable:
     adapter: postgresql
