Add cache role to database.yml for Heroku

--- a/config/database.yml
+++ b/config/database.yml
@@ -25,4 +25,7 @@ queue:
   adapter: postgresql
   url: <%= ENV["DATABASE_URL"] %>
 
+cache:
+  adapter: postgresql
+  url: <%= ENV["DATABASE_URL"] %>
 
